# cleanit

./: README.md  pyproject.toml
src/: ChaosAutomation.py  CleanAutomation.py  extensions.py  helpers.py  main.py  paths.py
tests/: test_chaos_automation.py  test_clean_automation.py  test_helpers.py  test_paths.py
