[tool.poetry]
name = "cleanit_project"
version = "1.0.0"
description = "Automation focused in cleaning Download folders mainly."
authors = ["Joao Ribeiro <joao.martins.ribeiro@devoteam.com>"]
readme = "README.md"
packages = [
    {include = "./src/"},
    {include = "./tests/"},
]

[tool.poetry.dependencies]
python = "^3.11.0"
click = "^8.1.7"
path = "^16.9.0"
pytest = "^7.4.3"

[tool.poetry.scripts]
cleanit = "src.main:cleanIt"
chaos = "src.main:randomIt"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
